test/should-fail/常量-2.j
function test takes nothing returns nothing
    constant local integer i = 1
endfunction